# legal-contract-intelligence

./: .env.example  .gitignore  BENCHMARKS.md  LICENSE  README.md  WHAT_BROKE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
configs/: axolotl_qwen_qlora.yaml
data/finetune/seed/: seed_examples.jsonl
data/sample/: employment_offer_lumen.txt  independent_contractor_zephyr.txt  mnda_acme_betacorp.txt  saas_subscription_orbit.txt
docs/: FINETUNING.md  OBSERVABILITY.md
evals/: README.md  golden_set.jsonl
prompts/: v1.yaml  v2.yaml
src/legal_contract_intelligence/: __init__.py  cli.py  config.py  embeddings.py  eval.py  llm.py  observability.py  pipeline.py  prompts.py  retrieval.py  vectorstore.py
src/legal_contract_intelligence/finetune/: __init__.py  evaluate.py  plot.py  schema.py  synthesize.py  train.py
src/legal_contract_intelligence/ingestion/: __init__.py  chunking.py  edgar.py  parsers.py
