[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-contract-intelligence"
version = "0.1.0"
description = "RAG-based legal contract intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Akhil Gorantala", email = "akhilgorantala1@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    # LangChain / LangGraph orchestration
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # Models / vectors
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.10.0",
    # Parsing
    "pypdf>=4.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.7.0",
    # Retrieval (Phase 2)
    "rank-bm25>=0.2.2",
    # CLI / config / runtime
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "openai>=1.40.0",
]

[project.scripts]
lci = "legal_contract_intelligence.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legal_contract_intelligence = ["py.typed"]
